[package]
name = "nexus_restake_rstnibi"
version = "0.1.0"
edition = "2021"



[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "1.1.0" }
cw20 = { version = "1.1.0" }
cw20-base = { version = "1.1.0", features = ["library"] }
snafu = { version = "0.6.3" }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
# cw20 = { version = "0.8.0" }  
cosmwasm-storage = { version = "1.5.2",features = ["iterator"]}
cosmwasm-std = { version = "1.5.3", features = ["staking"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
cw-storage-plus = {version="0.16.0",features = ["iterator"]}
thiserror = "1.0.58"
nibiru-std = "0.0.3"
schemars = "0.8.20"
cosmwasm-schema = "2.0.3"
cw-ownable = "0.5.1"
serde_json = "1.0.117"
