[package]
name = "nexus_avs_module"
version = "0.1.0"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
rand = "0.5.0"
nexus_rewards_dispatcher = {path = "../nexus_rewards_dispatcher", features = ["library"] }
signed_integers = { path = "../../packages/signed_integers", default-features = false, version = "0.1.0"}
nexus_validator_registary = {path = "../nexus_validator_registary", features = ["library"]}
cw2 = { version = "1.1.0" }
cw20 = { version = "1.1.0" }
cw20-base = { version = "1.1.0", features = ["library"] }
snafu = { version = "0.6.3" }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
cosmwasm-storage = { version = "1.5.2",features = ["iterator"]}
cosmwasm-std = { version = "1.5.3", features = ["staking"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
cw-storage-plus = {version="0.16.0",features = ["iterator"]}
thiserror = "1.0.58"
nibiru-std = "0.0.3"
schemars = "0.8.20"
cosmwasm-schema = "2.0.3"
cw-ownable = "0.5.1"
serde_json = "1.0.117"
# [dev-dependencies]
# cosmwasm-vm = { version = "0.16.0", default-features = false, features = ["iterator"] }
# cosmwasm-schema = { version = "0.16.0", default-features = false  }


