[package]
name = "stakingnibi"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
library = []


[dependencies]
cw20 = "0.8.0"
cw20-base = { version = "0.8.0", features = ["library"] }
cosmwasm-std = { version = "0.16.0", features = ["staking"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.8.0", features = ["iterator"]}
schemars = "0.8.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
rand = "0.5.0"


cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-vm = { version = "0.16.0", default-features = false, features = ["iterator"] }
cosmwasm-schema = { version = "0.16.0", default-features = false  }
